# MPDC

./: .codacy.yml  CMakeLists.txt  MPDC.vcxproj.filters  Notes.txt  README.md  agent.c  certificate.h  client.c  client.h  commands.h  common.h  dla.h  help.h  idg.c  idg.h  logger.c  mas.c  mas.h  menu.c  mpdc.c  mpdc.h  server.c  topology.c  trust.c
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Agent/: appagt.c  common.h
Client/: appclt.c
DLA/: DLA.vcxproj  appdla.c  appdla.h
Documents/: MDPC Specification.docx
MAS/: appmas.h  common.h
MPDC/: MPDC.vcxproj  crypto.c  crypto.h  menu.h  network.c  rds.c  resources.h  server.h  topology.h  trust.h
MPDC/Agent/: appagt.h
MPDC/Client/: MPDC Client.vcxproj  appclt.h  common.h
MPDC/DLA/: DLA.vcxproj.filters  common.h
MPDC/IDG/: appidg.h  common.h
MPDC/MAS/: MAS.vcxproj
MPDC/RDS/: common.h
RDS/: MPDC RDS.vcxproj  apprds.h
Source/: MPDC.sln
Source/Agent/: MPDC Agent.vcxproj  MPDC Agent.vcxproj.filters  MPDC Master.vcxproj.filters  appagt.c  appagt.h
Source/Client/: MPDC Client.vcxproj  appclt.c  appclt.h
Source/DLA/: DLA.vcxproj  DLA.vcxproj.filters  appdla.c  appdla.h
Source/IDG/: IDG.vcxproj  IDG.vcxproj.filters  appidg.c  appidg.h
Source/MAS/: MAS.vcxproj  MAS.vcxproj.filters  appmas.c  appmas.h
Source/MPDC/: MPDC.vcxproj  MPDC.vcxproj.filters  QRCS-PL License.txt  agent.c  agent.h  certificate.c  certificate.h  client.c  client.h  commands.h  crypto.c  crypto.h  dla.c  (+26 more)
docs/: .nojeckyll.txt  agent_8h.html  agent_8h_source.html  annotated.html  certificate_8h.html  certificate_8h.js  certificate_8h_source.html  classes.html  client_8h.html  client_8h_source.html  commands_8h.html  commands_8h_source.html  common_8h_source.html  crypto_8h.html  crypto_8h.js  crypto_8h_source.html  dir_122a33f46074b99ecb54eaab47ea652c.html  dir_122a33f46074b99ecb54eaab47ea652c.js  dla_8h.html  dla_8h_source.html  doxygen_crawl.html  doxymain_8h_source.html  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_p.html  functions_r.html  functions_s.html  (+147 more)
(+526 files in other folders)
